resulting in a TypeError that caused weewx to stop.

Modified wee_config_vantage and wee_config_fousb so that the configuration
file will be guessed if none is specified.

Fixed wxformulas.heatindexC to handle arguments of None type.

rsync now allows a port to be specified.

Fixed day/night transition bug.

Added gradients to the day/night transitions.

The names of the drivers have changed to make them more consistent.
	OLD                        NEW
	VantagePro.py (Vantage)    vantage.py (Vantage)
	WMR918.py     (WMR-918)    wmr9x8.py  (WMR9x8)
	wmrx.py       (WMR-USB)    wmr100.py  (WMR100)
	
	new (experimental) drivers:
	wmr200.py (WMR200)
	ws28xx.py (WS28xx)

The interface to the device driver "loader" function has changed slightly. It
now takes a second parameter, "engine". Details are in the Upgrading doc.

2.2.1 02/15/13

Added a function call to the Vantage driver that allows the lamp to be
turned on and off. Added a corresponding option to wee_config_vantage.

Fixed bug where an undefined wind direction caused an exception when using
ordinal wind directions.

2.2.0 02/14/13

Weewx can now be installed using Debian (DEB) or Redhat (RPM) packages, as well
as with the old 'setup.py' method. Because they install things in different
places, you should stick with one method or another. Don't mix and match.
Thanks to Matthew Wall for putting this together!

Added plot options line_gap_fraction and bar_gap_fraction, which control how
gaps in the data are handled by the plots. Also, added more flexible control of
plot colors, using a notation such as 0xBBGGRR, #RRGGBB, or the English name,
such as 'yellow'. Finally, added day/night bands to the plots. All contributed
by Matthew Wall. Thanks again, Matthew!

Ordinal wind directions can now be shown, just by adding the tag suffix
".ordinal_compass". For example, $current.windDir.ordinal_compass might show
'SSE' The abbreviations are set in the skin configuration file.
