@@ -36,21 +36,23 @@ bin/weewx/almanac.py
 bin/weewx/archive.py
 bin/weewx/crc16.py
 bin/weewx/filegenerator.py
-bin/weewx/fousb.py
 bin/weewx/imagegenerator.py
 bin/weewx/reportengine.py
 bin/weewx/restful.py
-bin/weewx/simulator.py
 bin/weewx/station.py
 bin/weewx/stats.py
 bin/weewx/units.py
-bin/weewx/vantage.py
-bin/weewx/wmr100.py
-bin/weewx/wmr200.py
-bin/weewx/wmr9x8.py
 bin/weewx/wxengine.py
 bin/weewx/wxformulas.py
 bin/weewx/wxpressure.py
+bin/weewx/drivers/__init__.py
+bin/weewx/drivers/fousb.py
+bin/weewx/drivers/simulator.py
+bin/weewx/drivers/vantage.py
+bin/weewx/drivers/wmr100.py
+bin/weewx/drivers/wmr200.py
+bin/weewx/drivers/wmr9x8.py
+bin/weewx/drivers/ws28xx.py
 docs/changes.txt
 docs/copyright.htm
 docs/customizing.htm
