@@ -1,0 +1,10 @@
+#
+#    Copyright (c) 2013 Tom Keffer <tkeffer@gmail.com>
+#
+#    See the file LICENSE.txt for your full rights.
+#
+#    $Revision$
+#    $Author$
+#    $Date$
+#
+"""Device drivers for the weewx weather system."""
