@@ -19,7 +19,7 @@
 
     <h1 class="title">Upgrading <span class="code">weewx</span><br/>
       <span class='version'>
-Version: 2.3.0a2
+Version: 2.3.0a3
       </span>
     </h1>
 
